@@ -1,3 +1,9 @@
+Fri Feb 27 20:55:42 2015  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>
+
+	* lib/rake: Update to rake (9237e74), typo fix and remove needless
+	  private syntax.
+	* test/rake: ditto.
+
 Fri Feb 27 17:06:44 2015  Koichi Sasada  <ko1@atdot.net>
 
 	* vm_core.h: define vm_svar_index.
